syntax = "proto3";
package deals;

service DealsService {
  rpc GetDeal (GetDealRequest) returns (Deal);
  rpc ListDeals (ListDealsRequest) returns (ListDealsResponse);
}

message Deal {
  string id = 1;
  string title = 2;
  string description = 3;
  double price = 4;
  string currency = 5;
}
message GetDealRequest {
  string id = 1;
}
message ListDealsRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message ListDealsResponse {
  repeated Deal deals = 1;
  int32 total_count = 2;
}